# Memory-Intelligence-Platform

./: .gitignore  CLAUDE.md  ENGINEERING_CONSTITUTION.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/mip/: __init__.py  config.py
backend/mip/api/: __init__.py  app.py  main.py  responses.py
backend/mip/api/middleware/: __init__.py  auth.py  rate_limit.py  request_context.py
backend/mip/api/v1/: __init__.py  admin.py  consolidate.py  context.py  explain.py  idempotency.py  intelligence_schemas.py  learn.py  memories.py  pagination.py  portability.py  retrieval_common.py  retrieval_schemas.py  schemas.py  search.py
backend/mip/core/: __init__.py  clock.py  errors.py  invariants.py  model.py  sections.py  specs.py  states.py
backend/mip/core/errors/: __init__.py  base.py  factories.py
backend/mip/engines/: __init__.py
backend/mip/engines/context/: engine.py
backend/mip/engines/knowledge/: consolidate.py  graph.py
backend/mip/engines/learning/: engine.py
backend/mip/engines/memory_manager/: __init__.py  engine.py  locks.py  versioning.py
backend/mip/engines/portability/: export_engine.py  import_engine.py
backend/mip/engines/retrieval/: engine.py  explain.py  models.py  ranking.py
backend/mip/engines/semantic/: engine.py  enrichment.py
backend/mip/engines/trust/: maturation.py  scoring.py
backend/mip/engines/validation/: __init__.py  engine.py
backend/mip/events/: __init__.py  projector.py  types.py
backend/mip/providers/: embeddings.py  local_embedding.py
backend/mip/storage/: __init__.py  interfaces.py
backend/mip/storage/sqlite/: __init__.py  database.py  event_store.py  graph_index.py  idempotency_store.py  memory_repository.py  search_index.py  vector_index.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_admin_api.py  test_auth.py  test_consolidate_api.py  test_context_api.py  test_explain_api.py  test_idempotency_api.py  test_learn_api.py  test_memories_api.py  test_portability_api.py  test_rate_limit.py  test_relationships_api.py  test_search_api.py  test_search_pagination.py
backend/tests/core/: test_invariant_checks.py  test_model_validation.py
backend/tests/engines/: test_consolidate_engine.py  test_context_engine.py  test_export_import.py  test_graph_engine.py  test_learn_engine.py  test_memory_manager_enrichment.py  test_memory_manager_lookups.py  test_retrieval_engine.py  test_semantic_enrichment.py  test_trust_maturation.py  test_trust_scoring.py
backend/tests/invariants/: test_concurrency.py  test_identity.py  test_state.py  test_version.py
backend/tests/lifecycle/: test_replay.py  test_transitions.py
backend/tests/providers/: test_local_embedding.py
backend/tests/storage/: test_event_store.py  test_search_index.py  test_vector_index.py
cli/: README.md  pyproject.toml
cli/mip_cli/: __init__.py  decorators.py  formatting.py  main.py
cli/mip_cli/commands/: admin.py  intelligence.py  memories.py  portability.py  retrieval.py
cli/tests/: conftest.py  test_cli_admin.py  test_cli_auth.py  test_cli_intelligence.py  test_cli_memories.py  test_cli_portability.py  test_cli_retrieval.py
documents/: 00-INDEX.md  01-engineering-thesis.md  02-architecture-document.md  (+12 more)
sdk/python/: README.md  pyproject.toml
sdk/python/mip_sdk/: __init__.py  _http.py  client.py  errors.py
sdk/python/mip_sdk/models/: __init__.py  intelligence.py  memory.py  requests.py  retrieval.py
sdk/python/mip_sdk/resources/: __init__.py  admin.py  intelligence.py  memories.py  portability.py  retrieval.py
sdk/python/tests/: conftest.py  factories.py  test_admin_resource.py  test_client_auth.py  test_errors.py  test_integration_live_app.py  test_integration_phase4.py  test_intelligence_resource.py  test_memories_resource.py  test_portability_resource.py  test_retrieval_resource.py
(+127 files in other folders)
