[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mip"
version = "0.1.0"
description = "Memory Intelligence Platform — local-first Memory Operating System (core service)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["mip*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_unreachable = true
files = ["mip", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=mip --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["mip"]
