[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mip-cli"
version = "0.1.0"
description = "Memory Intelligence Platform — official command-line interface"
requires-python = ">=3.12"
dependencies = [
    "mip-sdk",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
mip = "mip_cli.main:cli"

[tool.setuptools.packages.find]
include = ["mip_cli*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_unreachable = true
files = ["mip_cli", "tests"]
# mip_sdk is a first-party sibling package (this is a monorepo); editable
# installs use a PEP 660 finder shim mypy can't resolve on its own, so point
# it at the real source tree to get genuine type-checking against the SDK's
# own annotations (not Any-typed via ignore_missing_imports).
mypy_path = ["../sdk/python"]

[[tool.mypy.overrides]]
# The backend (`mip`) is used only by the integration-style test fixture; it
# ships no py.typed marker (mirrors sdk/python/pyproject.toml's reasoning).
module = "mip.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=mip_cli --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["mip_cli"]
