[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mip-sdk"
version = "0.1.0"
description = "Memory Intelligence Platform — official Python SDK"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["mip_sdk*"]

[tool.setuptools.package-data]
# PEP 561 marker — lets consumers (cli/, frontend tooling) type-check against
# this package's own annotations instead of treating it as untyped.
mip_sdk = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_unreachable = true
files = ["mip_sdk", "tests"]

[[tool.mypy.overrides]]
# The backend (`mip`) is a foreign, separately-versioned package consumed only
# by the integration test; it ships no py.typed marker (21-coding-standards.md
# third-party-dependency guidance applies the same way to an in-repo sibling).
# `ignore_missing_imports` treats it as untyped (Any) without mypy re-analyzing
# backend source under this project's config.
module = "mip.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=mip_sdk --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["mip_sdk"]
